Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-138506

QtGraphs crash when GraphView is destroyed

XMLWordPrintable

    • Linux/X11, macOS, Windows
    • 630b38b3e (dev), 43ccf20e6 (6.10), 2c62958ff (6.9), 229ddadc1 (tqtc/lts-6.8)

      When a GraphsView destructor is called, application is crashed because "pure virtual method called"

      This happens when any series is added to a GraphsView with the addSeries(series) method.

       

      To test this can be added to a simple Window, and crash will happen when closing the window, or to a StackView, and on Pop, it will crash.

       

      LineSeries {
        id: theLineSeries
        color: "red"
        XYPoint {x: 1; y: 1}
        XYPoint {x: 2; y: 2}
        XYPoint {x: 3; y: 3}
      }
      GraphsView {
        anchors.fill: parent  
        Component.onCompleted: {
          addSeries(theLineSeries);
        }
        axisY: ValueAxis {min: 0;max: 10}
        axisX: ValueAxis {max: 5;min: 0 }
      }
      

       

       

        For Gerrit Dashboard: QTBUG-138506
        # Subject Branch Project Status CR V

            oulu_hillbilly Sami Varanka
            vandawn David Vincze
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes