src/graphs2d/piechart/qpieseries.cpp
@@ -1198,7 +1198,8 @@ void QPieSeries::setAngleSpanLabelVisibility(QPieSeries::LabelVisibility newAngl
 }
 
 QPieSeriesPrivate::QPieSeriesPrivate()
-    : m_pieRelativeHorPos(.5)
+    : QAbstractSeriesPrivate(QAbstractSeries::SeriesType::Pie)
+    , m_pieRelativeHorPos(.5)
     , m_pieRelativeVerPos(.5)
     , m_pieRelativeSize(.7)
     , m_pieStartAngle(0)
