src/graphs2d/splinechart/qsplineseries.cpp
@@ -166,7 +166,7 @@ void QSplineSeries::setCapStyle(Qt::PenCapStyle newCapStyle)
 }
 
 QSplineSeriesPrivate::QSplineSeriesPrivate()
-    : QXYSeriesPrivate()
+    : QXYSeriesPrivate(QAbstractSeries::SeriesType::Spline)
     , m_width(1.0)
     , m_capStyle(Qt::PenCapStyle::SquareCap)
     , m_controlPoints()
